--- a/Fina.Api/appsettings.json
+++ b/Fina.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Fina;User Id=sa;Password=Zedao123@;Trusted_Connection=False;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
